--- a/karaf-rest-service-core/karaf-rest-api/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-api/pom.xml
@@ -15,11 +15,11 @@
     <packaging>bundle</packaging>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>com.weather.fetcher</groupId>-->
-<!--            <artifactId>weather-fetcher-repository</artifactId>-->
-<!--            <version>${project.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.weather.fetcher</groupId>
+            <artifactId>weather-fetcher-repository</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
